[package]
name = "tls-hot-reload"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "MIT"
categories = ["config", "web-programming"]
keywords = ["certificate", "hot-reload", "server", "tls", "rustls"]
description = "Tiny crate that brings wait- and lock-free TLS certificate hot-reloading for rustls"
readme = "README.md"
repository = "https://github.com/sebadob/tls-hot-reload"

[lib]
doctest = false

[features]
default = ["ring"]
ring = ["rustls/ring"]
aws_lc_rs = ["rustls/aws_lc_rs"]

[dependencies]
arc-swap = "1.7"
notify = "8"
rustls = { version = "0.23.23", default-features = false, features = ["logging", "prefer-post-quantum", "std", "tls12"] }
rustls-pemfile = "2"
thiserror = "2"
tokio = { version = "1.28.2", default-features = false, features = ["sync", "rt"] }
tracing = "0.1"
